--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 micronaut:
   application:
     name: learn
+    h2:
+      console:
+        enabled: true
+        path: /h2
+    datasource:
+      url: jdbc:h2:file:~/test
+      username: sa
+      password:
+      driverClassName: org.h2.Driver
+
 netty:
   default:
     allocator:
