--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,12 @@ repositories {
     mavenCentral()
 }
 
+ext { mockitoVersion = '4.0.0'
+      assertJVersion = '3.20.2' }
+
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor("org.projectlombok:lombok:1.18.20")
     annotationProcessor("io.micronaut:micronaut-http-validation")
     annotationProcessor("io.micronaut.spring:micronaut-spring-annotation")
     annotationProcessor("io.micronaut.spring:micronaut-spring-web-annotation")
@@ -28,7 +32,11 @@ dependencies {
     testAnnotationProcessor("io.micronaut.spring:micronaut-spring-annotation")
     testAnnotationProcessor("io.micronaut.spring:micronaut-spring-web-annotation")
     implementation("io.micronaut:micronaut-validation")
-
+    implementation("com.aerospike:aerospike-client:5.0.0")
+    implementation 'com.aerospike:java-object-mapper:1.2.1'
+    testImplementation("org.mockito:mockito-core:${mockitoVersion}")
+    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
+    testImplementation("org.assertj:assertj-core:${assertJVersion}")
 }
 
 
